--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing = "15px">
       <tr>
-        <td><img style="width:250px; height: 250px; border-radius: 125px;" src="/bud/download.jpg" alt=""></td>
+        <td><img style="width:250px; height: 250px; border-radius: 125px;" src="download.jpg" alt=""></td>
         <td> <h1>Amit Jacob K</h1>
           <p><em><strong><a href="https://www.appbrewery.co" target="_blank">Chemical Undergraduate</a></strong></em></p>
           <p style="width:600px ;"><em>Deeply passionate about the developing analytic and technological frontier of
