--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
       </thead>
       <tbody><tr>
         <td>2019 - 2023</td>
-        <td><h3><a href="/personel-info/contact.html">Contact</a></h3></td>
+        <td><h3><a href="contact.html">Contact</a></h3></td>
       </tr>
       <tr>
         <td>2021 - 2022</td>
-        <td><h3><a href="/personel-info/projects.html">Projects</a></h3></td>
+        <td><h3><a href="projects.html">Projects</a></h3></td>
       </tr>
       <tr>
         <td>2020 - 2023</td>
-        <td> <h3><a href="/personel-info/Courses.html">Courses</a></h3></td>
+        <td> <h3><a href="Courses.html">Courses</a></h3></td>
       </tr></tbody>
     </table>
     <hr size="3px" noshade="">
